# ML_PokeCard

./: .gitignore  README.md  main.py  notes.txt  pyproject.toml
data/: dataset.py  rarity_classes.py
evaluation/: evaluation_metrics.py  multi_run_eval.py
models/: cnn_builder.py  random_guessing_benchmark.py  training_callbacks.py
notebooks/: 2_data_preparation.ipynb  3_model_selection.ipynb  4_overfitting_experiment.ipynb  5_architecture_experiment.ipynb  6_hyperparameter_search.ipynb  7_evaluation.ipynb  data_exploration.ipynb
