[project]
name = "ml-pokecard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.21.0",
]
